# cez-distribution-hdo

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  release.yml
examples/: demo_cli.py
src/cez_distribution_hdo/: __init__.py  __version__.py  client.py  const.py  service.py  tariffs.py
tests/: test_client_fetch_signals.py  test_client_payload.py  test_service.py  test_tariffs.py
